VR: Prevent WebVR from receiving poses while in VR browsing mode.

This CL is kept intentionally as simple as possible for merging back to
M-63.

Tests to prevent this regression in the future will be added in a
followup CL.

Bug: 775571
Change-Id: I78ea1e46efdb2b48bc61e1ab704b6b1526d2c171
Reviewed-on: https://chromium-review.googlesource.com/723770
Reviewed-by: Brandon Jones <bajones@chromium.org>
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509606}
Former-commit-id: 417f0e75b6ea9652ccc64e8951a47cc2c79104e1