chrome/browser/android/vr_shell/vr_shell_delegate.cc
@@ -79,6 +79,10 @@ VrShellDelegate* VrShellDelegate::GetNativeVrShellDelegate(
 void VrShellDelegate::SetDelegate(VrShell* vr_shell,
                                   gvr::ViewerType viewer_type) {
   vr_shell_ = vr_shell;
+  device::GvrDevice* device = static_cast<device::GvrDevice*>(GetDevice());
+  if (device)
+    device->SetInBrowsingMode(true);
+
   if (pending_successful_present_request_) {
     CHECK(!present_callback_.is_null());
     base::ResetAndReturn(&present_callback_).Run(true);
@@ -90,9 +94,11 @@ void VrShellDelegate::SetDelegate(VrShell* vr_shell,
 
 void VrShellDelegate::RemoveDelegate() {
   vr_shell_ = nullptr;
-  device::VRDevice* device = GetDevice();
-  if (device)
+  device::GvrDevice* device = static_cast<device::GvrDevice*>(GetDevice());
+  if (device) {
+    device->SetInBrowsingMode(false);
     device->OnExitPresent();
+  }
 }
 
 void VrShellDelegate::SetPresentResult(JNIEnv* env,
@@ -170,6 +176,11 @@ void VrShellDelegate::Destroy(JNIEnv* env, const JavaParamRef<jobject>& obj) {
 
 void VrShellDelegate::SetDeviceId(unsigned int device_id) {
   device_id_ = device_id;
+  if (vr_shell_) {
+    device::GvrDevice* device = static_cast<device::GvrDevice*>(GetDevice());
+    if (device)
+      device->SetInBrowsingMode(true);
+  }
 }
 
 void VrShellDelegate::RequestWebVRPresent(
