device/vr/android/gvr/gvr_device.cc
@@ -182,6 +182,10 @@ void GvrDevice::ExitPresent() {
 
 void GvrDevice::GetPose(
     mojom::VRMagicWindowProvider::GetPoseCallback callback) {
+  if (in_browsing_mode_) {
+    std::move(callback).Run(nullptr);
+    return;
+  }
   std::move(callback).Run(
       GvrDelegate::GetVRPosePtrWithNeckModel(gvr_api_.get(), nullptr));
 }
